manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-react-7b735-service
spec:
  type: NodePort
  selector:
    app: deploy-react-7b735
  ports:
    - protocol: TCP
      port: 8156
      targetPort: 3000
